--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,8 @@
 {
   "semi": true,
+  "trailingComma": "es5",
   "singleQuote": true,
   "proseWrap": "never",
-  "tabWidth": 4
+  "tabWidth": 4,
+  "endOfLine": "auto"
 }
