--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Next Starter",
-    "short_name": "Next Starter",
+    "name": "iBrave Admin",
+    "short_name": "iBrave Admin",
     "icons": [
         {
             "src": "/android-chrome-192x192.png",
