--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "autoprefixer": "10.1.0",
         "babel-eslint": "10.1.0",
         "babel-plugin-inline-react-svg": "^1.1.2",
+        "cssnano": "^4.1.10",
         "eslint": "7.16.0",
         "eslint-config-prettier": "7.1.0",
         "eslint-config-react-app": "6.0.0",
@@ -56,6 +57,7 @@
         "lint-staged": ">=10.5.3",
         "npm-run-all": "4.1.5",
         "postcss": "8.2.1",
+        "postcss-selector-parser": "^6.0.4",
         "prettier": "2.2.1",
         "tailwindcss": "2.0.2",
         "typescript": "4.1.3"
