--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     },
     "husky": {
         "hooks": {
-            "pre-commit": "CI=1 npm-run-all --parallel check-types && lint-staged"
+            "pre-commit": "CI=1 npm-run-all --parallel check-types"
         }
     },
     "lint-staged": {
