--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
         "eslint-plugin-prettier": "3.3.0",
         "eslint-plugin-react": "7.21.5",
         "eslint-plugin-react-hooks": "4.2.0",
-        "husky": ">=4.3.6",
+        "husky": "next",
         "lint-staged": ">=10.5.3",
         "npm-run-all": "4.1.5",
         "postcss": "8.2.1",
@@ -64,7 +64,7 @@
     },
     "husky": {
         "hooks": {
-            "pre-commit": "CI=1 npm-run-all --parallel check-types"
+            "pre-commit": "CI=1 npm-run-all --parallel check-types & lint-staged"
         }
     },
     "lint-staged": {
