--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@badrap/bar-of-progress": "0.1.1",
         "@headlessui/react": "0.2.0",
         "@windmill/react-ui": "^0.5.0",
+        "axios": "^0.21.1",
         "classnames": "2.2.6",
         "faunadb": "4.0.0",
         "lodash": "^4.17.20",
