--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     },
     "dependencies": {
         "@badrap/bar-of-progress": "0.1.1",
+        "@emotion/is-prop-valid": "^1.0.0",
         "@headlessui/react": "0.2.0",
         "@windmill/react-ui": "^0.5.0",
         "axios": "^0.21.1",
         "classnames": "2.2.6",
         "faunadb": "4.0.0",
+        "html-react-parser": "^1.2.1",
         "immer": "^8.0.0",
         "lodash": "^4.17.20",
         "next": "^10.0.5",
@@ -29,6 +31,7 @@
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-query": "3.5.5",
+        "simple-react-lightbox": "^3.5.4",
         "svgo": "^1.3.2",
         "tabler-icons": "1.35.0"
     },
