--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@badrap/bar-of-progress": "0.1.1",
         "@emotion/is-prop-valid": "^1.0.0",
         "@headlessui/react": "0.2.0",
+        "@react-google-maps/api": "^2.1.0",
         "@windmill/react-ui": "^0.5.0",
         "axios": "^0.21.1",
         "classnames": "2.2.6",
