--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "scripts": {
         "dev": "next dev",
-        "debug": "NODE_OPTIONS='--inspect' next dev",
+        "debug": "--inspect next dev",
         "build": "next build",
         "start": "next start",
         "lint": "eslint --fix --ext .js,.ts,.tsx --ignore-path .gitignore .",
