--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "@tailwindcss/forms": "0.2.1",
         "@tailwindcss/typography": "0.3.1",
         "@types/classnames": "2.2.11",
+        "@types/googlemaps": "^3.43.2",
         "@types/lodash": "^4.14.167",
         "@types/next-auth": "^3.1.21",
         "@types/node": "^14.14.21",
