--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
         "moduleResolution": "node",
         "resolveJsonModule": true,
         "isolatedModules": true,
-        "jsx": "preserve"
+        "jsx": "preserve",
+        "types": ["googlemaps"]
     },
     "include": [
         "next-env.d.ts",
