--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "lodash": "^4.17.20",
         "next": "^10.0.5",
         "next-auth": "^3.1.0",
+        "node-gravatar": "^1.0.2",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-query": "3.5.5",
